Programs alignment issues WIP 2

--- a/css/blocks/nlen--custom-blocks.css
+++ b/css/blocks/nlen--custom-blocks.css
@@ -541,7 +541,7 @@ Graduates
 #nlen--dialog.has-video-content {
     width: 59.1875rem;
     height: 33.19rem;
-    
+
     .nlen---dialog-container {
         #vid1 {
             width: 100%;
@@ -4377,4 +4377,14 @@ Thanks
     background-color: rgba(129, 126, 126, 0.80);
     width: 100%;
     height: 100%;
+}
+
+.nlen--program-get-started.nlen--program-life-after {
+
+    & .nlen--container {
+        & .heading-and-supporting-text {
+            width: 25.2rem;
+        }
+    }
+
 }
