--- a/css/blocks/nlen--heading-inner.css
+++ b/css/blocks/nlen--heading-inner.css
@@ -46,7 +46,7 @@
                 align-items: flex-start;
                 gap: 2.5rem;
                 align-self: stretch;
-                width: 38rem;
+                width: 43rem;
                 flex: 0 0 auto;
 
 
