--- a/css/blocks/nlen--program-get-started.css
+++ b/css/blocks/nlen--program-get-started.css
@@ -20,7 +20,7 @@
 
         .heading-and-supporting-text {
             display: flex;
-            width: 24.8125rem;
+            width: 31.8125rem;
             flex-direction: column;
             align-items: flex-start;
             gap: var(--spacing-2xl, 1.25rem);
