--- a/css/blocks/nlen--program-opportunities.css
+++ b/css/blocks/nlen--program-opportunities.css
@@ -10,7 +10,7 @@
 
         .heading-and-support-text {
             display: flex;
-            width: 3%;
+            width: 32.5rem;
             flex-direction: column;
             align-items: flex-start;
             flex: 0 0 auto;
